--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   dddd
   <h4>ciao ciao<h4>
 
-    <img src="src/babyjoda.png" alt="Girl in a jacket" width="500" height="600">
+    <img src="src/babyjoda.png" alt="Girl in a jacket">
     
 </body>
 
